spring/product-catalog/target/classes/META-INF/fabric8/openshift/product-catalog-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/product-catalog
    fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/product-catalog
    fabric8.io/scm-tag: booster-parent-11
    fabric8.io/scm-url: https://github.com/openshiftio/product-catalog
  labels:
    app: product-catalog
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat
  name: product-catalog
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: product-catalog
    provider: fabric8
    group: com.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/product-catalog
        fabric8.io/scm-url: https://github.com/openshiftio/product-catalog
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/product-catalog
        fabric8.io/scm-tag: booster-parent-11
      labels:
        app: product-catalog
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.redhat
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: product-catalog-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: product-catalog-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: product-catalog:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: product-catalog:latest
    type: ImageChange
