spring/product-catalog/target/classes/META-INF/fabric8/openshift/product-catalog-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: product-catalog
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat
  name: product-catalog
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product-catalog
